--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,13 @@
           box-sizing: border-box;
 }
 
+.hero__background {
+  height: 890px;
+  z-index: o;
+  background: url("/img/backhouse.png") no-repeat top right, -webkit-gradient(linear, left top, left bottom, from(rgba(96, 157, 243, 0.5)), color-stop(64.93%, rgba(225, 243, 243, 0.5))), #E1F3F3;
+  background: url("/img/backhouse.png") no-repeat top right, linear-gradient(180deg, rgba(96, 157, 243, 0.5) 0%, rgba(225, 243, 243, 0.5) 64.93%), #E1F3F3;
+}
+
 .navbar-background {
   width: 100%;
   height: 100px;
@@ -10,6 +17,8 @@
 }
 
 .container {
+  padding-right: 15px;
+  padding-left: 15px;
   max-width: 1240px;
   margin: auto;
 }
@@ -30,14 +39,20 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Montserrat Bold';
+  src: url("../fonts/Montserrat-Bold.eot");
+  src: url("../fonts/Montserrat-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Montserrat-Bold.woff") format("woff"), url("../fonts/Montserrat-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   font-family: 'Montserrat Regular', sans-serif;
 }
 
 .navbar-wrap {
   min-height: 100px;
-  -ms-flex-line-pack: center;
-      align-content: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -48,8 +63,6 @@ body {
       -ms-flex-align: center;
           align-items: center;
   z-index: 1;
-  padding-right: 15px;
-  padding-left: 15px;
 }
 
 .navbar__nav-link {
@@ -114,26 +127,91 @@ body {
   margin-left: 30px;
   display: none;
   position: relative;
+  background: none;
+  border: none;
 }
 
-@media (max-width: 1000px) {
-  .nav {
-    display: none;
-  }
+.hero__tittle {
+  padding-top: 100px;
+  line-height: 75px;
+  margin: 0 auto;
+  font-family: 'Montserrat Bold', sans-serif;
+  font-size: 75px;
+  color: #333B41;
 }
 
-@media (max-width: 1200px) {
-  .navbar__nav-link {
-    font-size: 10px;
-  }
-  .navbar_button_case {
-    display: none;
-  }
-  .menu-button {
-    display: block;
-    cursor: pointer;
-    background: none;
-    border: none;
-  }
+.hero__article {
+  padding-top: 26px;
+  font-size: 18px;
+  color: #2C3133;
+  line-height: 26px;
+}
+
+.hero__subtittle {
+  padding-top: 60px;
+  font-family: 'Montserrat Semibold', sans-serif;
+  font-size: 30px;
+  color: #2C3133;
+}
+
+.hero__input-name {
+  padding: 21px 25px;
+  width: 198px;
+  height: 60px;
+  opacity: 0.2;
+  border: 1px solid #000000;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 5px\;;
+}
+
+.hero__input-mobile {
+  margin-left: 12px;
+  padding: 21px 25px;
+  width: 198px;
+  height: 60px;
+  opacity: 0.2;
+  border: 1px solid #000000;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.hero__button {
+  cursor: pointer;
+  font-size: 14px;
+  margin-left: 16px;
+  color: #ffffff;
+  border-radius: 5px;
+  border: none;
+  width: 200px;
+  height: 60px;
+  background: linear-gradient(266.37deg, #F1545F 0.35%, #CE1120 99.65%);
+}
+
+.hero__button:hover {
+  background: linear-gradient(266.37deg, #CE1120 0.35%, #F1545F 99.65%);
+}
+
+.hero__form-article {
+  font-size: 12px;
+  color: #97BEBE;
+}
+
+.hero__advantages span {
+  margin-top: 50px;
+  display: inline-block;
+  width: 280px;
+}
+
+.hero__advantages h3 {
+  font-size: 18px;
+  font-family: 'Montserrat Semibold', sans-serif;
+}
+
+.hero__advantages p {
+  line-height: 20px;
+  color: #2C3133 0.5;
+  font-size: 14px;
 }
 /*# sourceMappingURL=style.css.map */
