--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -1,13 +1,19 @@
 *
     box-sizing: border-box
-
+.hero__background
+    height: 890px
+    z-index: o
+    background:  url('/img/backhouse.png' )  no-repeat top right, linear-gradient(180deg, rgba(96, 157, 243, 0.5) 0%, rgba(225, 243, 243, 0.5) 64.93%), #E1F3F3  
     
 .navbar-background
-    
     width: 100%
     height: 100px
     background-color: #1D3557
 .container
-    
+    padding-right: 15px
+    padding-left: 15px
     max-width: 1240px
     margin: auto
+    
+       
+                
