--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,19 @@
 
 .hero__background {
   height: 890px;
-  z-index: o;
+  z-index: -1;
   background: url("/img/backhouse.png") no-repeat top right, -webkit-gradient(linear, left top, left bottom, from(rgba(96, 157, 243, 0.5)), color-stop(64.93%, rgba(225, 243, 243, 0.5))), #E1F3F3;
   background: url("/img/backhouse.png") no-repeat top right, linear-gradient(180deg, rgba(96, 157, 243, 0.5) 0%, rgba(225, 243, 243, 0.5) 64.93%), #E1F3F3;
 }
 
-.navbar-background {
+.navbar {
   width: 100%;
   height: 100px;
   background-color: #1D3557;
 }
 
 .container {
+  min-width: 360px;
   padding-right: 15px;
   padding-left: 15px;
   max-width: 1240px;
@@ -51,8 +52,8 @@ body {
   font-family: 'Montserrat Regular', sans-serif;
 }
 
-.navbar-wrap {
-  min-height: 100px;
+.navbar .navbar__wrap {
+  padding-top: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -131,6 +132,22 @@ body {
   border: none;
 }
 
+@media (max-width: 1199px) {
+  .navbar__button {
+    display: none;
+  }
+}
+
+@media (max-width: 1040px) {
+  .navbar__nav-link {
+    display: none;
+  }
+}
+
+.hero {
+  z-index: 0;
+}
+
 .hero__tittle {
   padding-top: 100px;
   line-height: 75px;
@@ -162,7 +179,7 @@ body {
   border: 1px solid #000000;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border-radius: 5px\;;
+  border-radius: 5px;
 }
 
 .hero__input-mobile {
@@ -198,8 +215,8 @@ body {
   color: #97BEBE;
 }
 
-.hero__advantages span {
-  margin-top: 50px;
+.hero__advantages div {
+  margin-top: 20px;
   display: inline-block;
   width: 280px;
 }
@@ -213,5 +230,210 @@ body {
   line-height: 20px;
   color: #2C3133 0.5;
   font-size: 14px;
+}
+
+.creative__layout {
+  margin: 0 auto;
+  height: 700px;
+  background: #F1FAEE;
+}
+
+.creative__layout h2 {
+  font-size: 40px;
+  font-family: 'Montserrat Bold', sans-serif;
+  margin: 0;
+  padding-top: 76px;
+}
+
+.creative__layout ul {
+  padding: 0;
+}
+
+.rocket {
+  left: -8%;
+  top: 10px;
+  position: absolute;
+}
+
+.tabs__pic1 {
+  position: absolute;
+  right: 100px;
+  top: 1240px;
+}
+
+.tabs__pic2 {
+  position: absolute;
+  right: 100px;
+  top: 1019px;
+}
+
+.tabs {
+  margin-top: 50px;
+}
+
+.text {
+  width: 260px;
+  background: #FFF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.tabs {
+  font-size: 18px;
+  max-width: 1200px;
+}
+
+.tabs__caption {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  list-style: none;
+  position: relative;
+  margin: -1px 0 0 -1px;
+}
+
+.tabs__caption li:last-child:before {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  right: -2px;
+  z-index: -1;
+  height: 5px;
+  background: #3F789B;
+}
+
+.tabs__caption:after {
+  margin: 0;
+  margin-content: '';
+  margin-display: table;
+  margin-clear: both;
+}
+
+.tabs__caption li {
+  width: 260px;
+  padding: 20px 20px;
+  margin: 1px 0 0 1px;
+  background: none;
+  color: #000000;
+  position: relative;
+  border-width: 2px 2px 0;
+  border-radius: 5px 5px 0 0;
+  text-align: left;
+}
+
+.tabs__caption li:not(.active) {
+  cursor: pointer;
+}
+
+.tabs__caption li:not(.active):hover {
+  background: #3F789B;
+  color: #fff;
+}
+
+.tabs__caption .active {
+  background: #3F789B;
+  color: #fff;
+}
+
+.tabs__caption .active:after {
+  content: '';
+  position: absolut;
+  bottom: -5px;
+  left: 0;
+  right: 0;
+  height: 5px;
+  background: #4786AC;
+}
+
+.tabs__content {
+  border-radius: 0px 5px 5px 5px;
+  height: 409px;
+  font-size: 18px;
+  color: #fff;
+  display: none;
+  background: #4786AC;
+  padding: 60px 75px;
+}
+
+.tabs__content.active {
+  display: block;
+}
+
+.vertical .tabs__caption {
+  float: left;
+  display: block;
+}
+
+.vertical .tabs__caption li {
+  border-width: 2px 0 2px 2px;
+  border-radius: 5px 0 0 5px;
+}
+
+.vertical .tabs__caption li:last-child:before {
+  display: none;
+}
+
+.vertical .tabs__caption .active:after {
+  left: auto;
+  top: 0;
+  right: -2px;
+  bottom: 0;
+  width: 2px;
+  height: auto;
+}
+
+.vertical .tabs__content {
+  overflow: hidden;
+}
+
+.active li {
+  padding-top: 14px;
+}
+
+@media screen and (max-width: 650px) {
+  .tabs__caption li {
+    -ms-flex: 1 0 auto;
+    -webkit-box-flex: 1;
+            flex: 1 0 auto;
+  }
+  .vertical .tabs__caption {
+    float: none;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+  }
+  .vertical .tabs__caption li {
+    border-width: 2px 2px 0;
+    border-radius: 5px 5px 0 0;
+  }
+  .vertical .tabs__caption li:last-child:before {
+    display: block;
+  }
+  .vertical .tabs__caption .active:after {
+    top: auto;
+    bottom: -5px;
+    left: 0;
+    right: 0;
+    width: auto;
+    height: 5px;
+    background: #FFF;
+  }
+}
+
+.quiz {
+  margin: 0 auto;
+  height: 700px;
+  background: url("../img/bgcity.png") no-repeat;
+}
+
+.quiz h2 {
+  color: #48677A;
+  font-size: 40px;
+  font-family: 'Montserrat Bold', sans-serif;
+  margin: 0;
+  padding-top: 76px;
 }
 /*# sourceMappingURL=style.css.map */
