--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,4 +1,5 @@
 .hero
+	z-index: 0
 	&__tittle
 		padding-top: 100px
 		line-height: 75px
@@ -25,7 +26,7 @@
 		opacity: 0.2
 		border: 1px solid #000000
 		box-sizing: border-box
-		border-radius: 5px\
+		border-radius: 5px
 	
 	&__input-mobile
 		margin-left: 12px
@@ -55,8 +56,8 @@
 	&__form-article
 		font-size: 12px
 		color: #97BEBE
-	&__advantages span
-		margin-top: 50px
+	&__advantages div
+		margin-top: 20px
 		display: inline-block
 		width: 280px
 	
