--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,3 +8,7 @@
 @import 'blocks/navbar'
 //Главный экран
 @import 'blocks/hero'
+// Второй  экран
+@import 'blocks/layout'
+// Третий экран
+@import 'blocks/quiz'
