--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -11,11 +11,19 @@
     background-color: #1D3557
     
 .container
-    min-width: 360px
     padding-right: 15px
     padding-left: 15px
     max-width: 1240px
     margin: auto
+
+@media ( max-width: 1199px  )
+    .container
+        max-width: 1000px
+
+@media ( max-width: 1040px  )
+    .container
+        max-width: 800px
+    
     
        
                 
