--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -2,7 +2,6 @@
     .navbar__wrap
         padding-top: 20px
         display: flex
-        justify-content: center
         align-items: center
         z-index: 1 
        
@@ -65,12 +64,17 @@
         &__button
             display: none
 
+
 @media  (max-width: 1040px)
     .navbar
         &__nav-link
             display: none
+        
+    .menu
+        &-button
+            display: block
 
-    
+
  
     
     
